Db in gitignore.

--- a/views/scss/style.scss
+++ b/views/scss/style.scss
@@ -22,8 +22,8 @@ div.container {
 }
 
 header.navigation {
-  margin-bottom: 30px; 
-  
+  margin-bottom: 30px;
+
   $navigation-background: $dark-gray;
   $navigation-color: transparentize(white, 0.3);
   $navigation-color-hover: white;
@@ -48,7 +48,7 @@ header.navigation {
   }
 
   .logo {
-    float: left;    
+    float: left;
     max-height: $navigation-height;
     padding-left: 1em;
     padding-right: 2em;
@@ -86,7 +86,7 @@ header.navigation {
     }
   }
 
-  ul#navigation-menu {    
+  ul#navigation-menu {
     clear: both;
     -webkit-transform-style: preserve-3d; // stop webkit flicker
     display: none;
@@ -140,9 +140,9 @@ header.navigation {
       a {
         @include transition (all 0.2s ease-in-out);
         background: $navigation-nav-button-background;
-        border-radius: $base-border-radius; 
+        border-radius: $base-border-radius;
         color: white;
-        font-size: .8em;  
+        font-size: .8em;
         font-weight: 800;
         padding: .6em 1em;
         text-transform: uppercase;
@@ -171,7 +171,7 @@ header.navigation {
     $search-bar-background: lighten($search-bar-border-color, 10);
 
     width: 19em;
-    position: relative; 
+    position: relative;
     display: inline-block;
 
     input {
@@ -209,8 +209,8 @@ header.navigation {
 }
 
 article.type-system-geometric {
-  $sans-serif: 'Questrial', sans-serif;
-  $serif: 'Sanchez', serif;
+  $sans-serif: 'Questrial', sans-serif !global;
+  $serif: 'Sanchez', serif !global;
 
   @include clearfix;
   text-align: left;
@@ -292,7 +292,7 @@ article.type-system-geometric {
       right: -12px;
     }
   }
-  
+
   hr {
     width: 3em;
   }
@@ -301,5 +301,3 @@ article.type-system-geometric {
     font-family: $sans-serif;
   }
 }
-
-
