--- a/views/home.erb
+++ b/views/home.erb
@@ -1,10 +1,10 @@
 <% @posts.each do |post| %>
 <article class="type-system-geometric">
-  
+
 <h1><%= post.title %></h1>
 
 <p class="date"><%= post.created_at.strftime("%d-%m-%Y") %></p>
-<p><%= post.body %>
+<p><%= post.body.length < 100 ? post.body : "#{post.body[0..100]}..." %>
 </p>
 
 <hr>
