--- a/views/home.erb
+++ b/views/home.erb
@@ -1,17 +1,16 @@
 <% @posts.each do |post| %>
-<article class="type-system-geometric">
+  <article class="type-system-geometric">
 
-<h1><%= post.title %></h1>
+    <h1><%= post.title %></h1>
 
-<p class="date"><%= post.created_at.strftime("%d-%m-%Y") %></p>
-<p><%= post.body.length < 100 ? post.body : "#{post.body[0..100]}..." %>
-</p>
+    <p class="date"><%= post.created_at.strftime("%d-%m-%Y") %></p>
+    <p><%= post.body.length < 100 ? post.body : "#{post.body[0..100]}..." %></p>
 
-<hr>
-<p class="author"><%= post.author %></p>
+    <hr>
+    <p class="author"><%= post.author %></p>
 
-</article>
-<hr>
+  </article>
+  <hr>
 <% end %>
 
 <a href="google.com">Een link naar Google.</a>
